--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,8 @@ section {
   align-items: center;
   justify-content: center;
 
+  min-height: 50vh;
+
   max-width: 100vw;
   position: relative;
 }
@@ -152,6 +154,7 @@ section {
 #hero {
   background-color: var(--primary-color);
   border-bottom: 4px solid var(--secondary-color);
+
 }
 
 .hero-container {
