--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
   max-width: 100vw;
   background-color: var(--primary-color);
@@ -46,7 +49,7 @@ h1 {
 }
 
 a:link {
-  color: var(--accent-2);
+  color: green;
   background-color: transparent;
   text-decoration: none;
 }
@@ -58,13 +61,13 @@ a:visited {
 }
 
 a:hover {
-  color: var(--accent-2);
+  color: var(--secondary-color);
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: var(--accent-2);
+  color: var(--secondary-color);
   background-color: transparent;
   text-decoration: underline;
 }
@@ -317,157 +320,66 @@ section {
   color: var(--primary-color);
 }
 
+.project-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
 .project-card {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-
-  padding: 1rem;
+  width: 40vw;
+  background-color: #f5f5f5;
   border-radius: 8px;
-  border: 1px solid var(--accent-1);
-}
-
-.project-card > h3 {
-  color: var(--secondary-color);
-}
-
-.project-card > h5 {
-  color: var(--secondary-color);
-  opacity: 0.5;
-}
-
-.project-card > h4 {
-  color: var(--secondary-color);
-  opacity: 0.5;
-}
-
-.project-card > p {
-  font-size: 12px;
-  width: 100%;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  transition: transform 0.3s ease;
 }
 
-.project-img {
+/* Media query for mobile screens */
+@media (max-width: 767px) {
+  .project-card {
+    width: 100%;
+    margin-bottom: 20px; /* Add some spacing between cards */
+  }
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+}
+
+.project-card img {
   width: 100%;
-  aspect-ratio: 16/9;
+  height: 200px;
+  object-fit: cover;
 }
 
-.project-card-links {
-  align-self: flex-end;
-
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
+.project-details {
+  padding: 1rem;
 }
 
-.project-icons {
-  --size: 20px;
-  width: var(--size);
-  aspect-ratio: 1;
+.project-details h3 {
+  margin-top: 0;
 }
 
-.project-card-links > a {
-  display: flex;
-  align-items: center;
-
-  font-size: 10px;
-  gap: 4px;
+.project-link {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--secondary-color);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 
-.project-card-links > a:link,
-.project-card-links > a:visited {
-  color: var(--primary-color);
+.project-link:hover {
+  background-color: var(--secondary-color);
+  color: var(--accent-2)
 }
 
 /* CMU course reviews  */
-
-#cmu-course-reviews {
-  padding: 2rem;
-  animation: fade-in 500ms linear forwards;
-}
-
-.cmu-course-reviews-container {
-  display : flex;
-  height: 100%;
-  width: 90%;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-}
-
-.cmu-course-reviews-card {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  
-  justify-content: center;
-  align-items: center;
-
-  padding: 1rem;
-  border-radius: 8px;
-  border: 1px solid var(--accent-1);
-}
-
-.cmu-course-reviews-card > h3 {
-  color: var(--secondary-color);
-}
-
-.cmu-course-reviews-card > h4 {
-  color: var(--secondary-color);
-  opacity: 0.5;
-}
-
-.cmu-course-reviews-card > p {
-  font-size: 14px;
-  width: 100%;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1000;
-  overflow: hidden;
-}
-
-.cmu-course-reviews-img {
-  width: 100%;
-  aspect-ratio: 16/9;
-}
-
-.cmu-course-reviews-card-links {
-  align-self: flex-end;
-
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-
-.cmu-course-reviews-icons {
-  --size: 20px;
-  width: var(--size);
-  aspect-ratio: 1;
-}
-
-.cmu-course-reviews-card-links > a {
-  display: flex;
-  align-items: center;
-
-  font-size: 10px;
-  gap: 4px;
-}
-
-.cmu-course-reviews-card-links > a:link,
-.cmu-course-reviews-card-links > a:visited {
-  color: var(--primary-color);
-}
-
-
-.portfolio-content {
-  /* Existing styles for .portfolio-content */
-}
 
 .course-reviews {
   display: flex;
@@ -480,8 +392,7 @@ section {
   background-color: #f1f1f1;
   padding: 10px;
   position: sticky;
-  top: 0;
-  z-index: 1;
+  z-index: 3;
   overflow-x: auto;
   white-space: nowrap;
   text-align: center;
@@ -556,7 +467,7 @@ section {
 }
 
 .course-card-content > p {
-  font-size: 1.1em;
+  font-size: 0.9em;
   width: 100%;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -746,13 +657,6 @@ footer {
     gap: 40px;
   }
 
-  .about-content > h2 {
-    font-size: 32px;
-  }
-
-  .about-content > h3 {
-    font-size: 24px;
-  }
 
   .about-content > p {
     font-size: 16px;
@@ -808,6 +712,19 @@ footer {
   .footer-content > a {
     font-size: 16px;
   }
+}
+
+.section-header {
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 1.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: sticky;
+  z-index: 5;
 }
 
 @media only screen and (min-width: 1024px) {
