--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ html {
     padding: 1.5em;
  }
 
+@media (max-width: 576px) {
+    html {
+        padding: 1em; /* Reduce padding for mobile devices */
+    }
+}
 @media (min-width: 768px) {
     html {
         font-size: 125%;
@@ -111,6 +116,14 @@ table, .highlight > pre, pre.example {
     font-family: monospace, monospace;
     border: 1px dashed rgba(250, 100, 50, 0.5);
 }
+/* iframe {
+    padding: 0;
+    margin: 0;
+    border: none;
+    width: 100%;
+    height: 100%;
+    display: block;
+} */
 
 .title {
     font-size: 2.5em;
@@ -248,9 +261,6 @@ header a + a {
     margin: 20px 0;
   }
 
-.notebook-container {
-    padding: 1rem;
-}
 
 
   .notebook-iframe {
